[gd_scene load_steps=14 format=3 uid="uid://n2ic0gsguuw5"]

[ext_resource type="Script" path="res://player.gd" id="1_goanb"]
[ext_resource type="Texture2D" uid="uid://ddrqgifi1ofrt" path="res://skeletal rooboid walking sprite.png" id="2_cur0v"]
[ext_resource type="Texture2D" uid="uid://bt62b2g11gbb8" path="res://skeletal rooboid walking sprite1.png" id="2_i6egm"]
[ext_resource type="PackedScene" uid="uid://dsxtql4g4yorq" path="res://hurtbox.tscn" id="4_siioc"]
[ext_resource type="AudioStream" uid="uid://bx7pu8ex0cyp3" path="res://Sounds/player_hurt.mp3" id="5_vfjov"]
[ext_resource type="AudioStream" uid="uid://dg6hrf8ltu6i8" path="res://Sounds/player_death.mp3" id="6_54wa6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bker8"]
atlas = ExtResource("2_cur0v")
region = Rect2(0, 0, 40, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmq3g"]
atlas = ExtResource("2_cur0v")
region = Rect2(40, 0, 40, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uimt"]
atlas = ExtResource("2_cur0v")
region = Rect2(80, 0, 40, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcowh"]
atlas = ExtResource("2_cur0v")
region = Rect2(120, 0, 40, 95)

[sub_resource type="SpriteFrames" id="SpriteFrames_gaudu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i6egm")
}],
"loop": true,
"name": &"idle",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bker8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmq3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uimt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcowh")
}],
"loop": true,
"name": &"walk",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rmplp"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mdwbr"]
radius = 18.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
top_level = true
position = Vector2(574, 323)
script = ExtResource("1_goanb")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(2, 2)

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -40)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_gaudu")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_rmplp")

[node name="Hurtbox" parent="." instance=ExtResource("4_siioc")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_mdwbr")

[node name="PlayerHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vfjov")
volume_db = -24.002
pitch_scale = 1.62

[node name="PlayerDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_54wa6")
volume_db = -22.795

[connection signal="player_death" from="." to="." method="_on_player_death"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="Hurtbox"]
