[gd_scene load_steps=76 format=3 uid="uid://n2ic0gsguuw5"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ucc62"]
[ext_resource type="Texture2D" uid="uid://cmwqrocfff5a4" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_0.png" id="2_5tdxe"]
[ext_resource type="Texture2D" uid="uid://bae1tcs8gqbd5" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_1.png" id="3_2xwcn"]
[ext_resource type="Texture2D" uid="uid://dfnjmip1ok6et" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_2.png" id="4_60wir"]
[ext_resource type="PackedScene" uid="uid://dsxtql4g4yorq" path="res://scenes/hurtbox.tscn" id="4_siioc"]
[ext_resource type="Texture2D" uid="uid://be4uu8q0grohq" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_3.png" id="5_6x3bc"]
[ext_resource type="AudioStream" uid="uid://bx7pu8ex0cyp3" path="res://sounds/player_hurt.mp3" id="5_vfjov"]
[ext_resource type="AudioStream" uid="uid://dg6hrf8ltu6i8" path="res://sounds/player_death.mp3" id="6_54wa6"]
[ext_resource type="Texture2D" uid="uid://bwdw32uaooqqv" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_4.png" id="6_hme2u"]
[ext_resource type="AudioStream" uid="uid://crcoluyyhhy3" path="res://sounds/enemy_hurt.mp3" id="7_gv5am"]
[ext_resource type="Texture2D" uid="uid://vy2lyiuhtokw" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_5.png" id="7_ox1wy"]
[ext_resource type="Texture2D" uid="uid://dhbhiqq5h0xvp" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_6.png" id="8_3lmby"]
[ext_resource type="Texture2D" uid="uid://h8675gqklpfc" path="res://sprites/player/player_walk_e/fighter_default_walk_E_0.0_7.png" id="9_qvp1q"]
[ext_resource type="Texture2D" uid="uid://xmr7477dxc4t" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_0.png" id="10_rmyex"]
[ext_resource type="Texture2D" uid="uid://cd3yn5e445uro" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_1.png" id="11_t0tli"]
[ext_resource type="Texture2D" uid="uid://bahlu647p8je3" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_2.png" id="12_l7d5v"]
[ext_resource type="Texture2D" uid="uid://qxpphn8mbqm1" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_3.png" id="13_t7wq5"]
[ext_resource type="Texture2D" uid="uid://d2x7au6js2fov" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_4.png" id="14_168m1"]
[ext_resource type="Texture2D" uid="uid://cvj6o5h776ikn" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_5.png" id="15_165oi"]
[ext_resource type="Texture2D" uid="uid://dl70u2pa3twt8" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_6.png" id="16_rcx72"]
[ext_resource type="Texture2D" uid="uid://ba2toytpfd3bh" path="res://sprites/player/player_walk_n/fighter_default_walk_N_90.0_7.png" id="17_6xc2r"]
[ext_resource type="Texture2D" uid="uid://ct0lota542yq2" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_0.png" id="18_uvfk5"]
[ext_resource type="Texture2D" uid="uid://bjvlhcvksc6qp" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_1.png" id="19_o0as3"]
[ext_resource type="Texture2D" uid="uid://b5rbbrefj6gpj" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_2.png" id="20_j882k"]
[ext_resource type="Texture2D" uid="uid://cjn73qlfgmglr" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_3.png" id="21_x8hwl"]
[ext_resource type="Texture2D" uid="uid://bfw8cj7dq6qv2" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_4.png" id="22_nrb8y"]
[ext_resource type="Texture2D" uid="uid://cm364s3qx2qdo" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_5.png" id="23_5am52"]
[ext_resource type="Texture2D" uid="uid://bvm314wgdlj7p" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_6.png" id="24_f78sx"]
[ext_resource type="Texture2D" uid="uid://bo03ai34fq811" path="res://sprites/player/player_walk_ne/fighter_default_walk_NE_45.0_7.png" id="25_i3y76"]
[ext_resource type="Texture2D" uid="uid://dqtckdn1v781e" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_0.png" id="26_aort6"]
[ext_resource type="Texture2D" uid="uid://crhtqupexvxwy" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_1.png" id="27_jfymv"]
[ext_resource type="Texture2D" uid="uid://cewsf6ephbwlj" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_2.png" id="28_jpj7p"]
[ext_resource type="Texture2D" uid="uid://iwx2kucqgl56" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_3.png" id="29_q6awm"]
[ext_resource type="Texture2D" uid="uid://i1ttextfmbvl" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_4.png" id="30_6uojm"]
[ext_resource type="Texture2D" uid="uid://d32l11i8ckasf" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_5.png" id="31_s4xp6"]
[ext_resource type="Texture2D" uid="uid://c8xkb6qbdruls" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_6.png" id="32_imorc"]
[ext_resource type="Texture2D" uid="uid://c2unslmwmwcf0" path="res://sprites/player/player_walk_nw/fighter_default_walk_NW_135.0_7.png" id="33_yidkt"]
[ext_resource type="Texture2D" uid="uid://cish1qp1fm1o3" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_0.png" id="34_ko6qb"]
[ext_resource type="Texture2D" uid="uid://ye0yx0bbadj0" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_1.png" id="35_osku0"]
[ext_resource type="Texture2D" uid="uid://b08vw8k2ahcfy" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_2.png" id="36_d6vs6"]
[ext_resource type="Texture2D" uid="uid://nqmghx25yj3c" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_3.png" id="37_o7we4"]
[ext_resource type="Texture2D" uid="uid://octby1lfll6j" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_4.png" id="38_mu5vf"]
[ext_resource type="Texture2D" uid="uid://4nsmws0pijv8" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_5.png" id="39_iruqu"]
[ext_resource type="Texture2D" uid="uid://du0qx6p3s5jqx" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_6.png" id="40_xig82"]
[ext_resource type="Texture2D" uid="uid://di1sqpw800xau" path="res://sprites/player/player_walk_s/fighter_default_walk_S_270.0_7.png" id="41_84uk1"]
[ext_resource type="Texture2D" uid="uid://dnayq8fqo4h41" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_0.png" id="42_b6pud"]
[ext_resource type="Texture2D" uid="uid://dnjvsun1byoef" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_1.png" id="43_qnjvb"]
[ext_resource type="Texture2D" uid="uid://b27855cg8hq7i" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_2.png" id="44_v47m2"]
[ext_resource type="Texture2D" uid="uid://bylsos8lujb4q" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_3.png" id="45_i6vqb"]
[ext_resource type="Texture2D" uid="uid://mwcbfqu6nrww" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_4.png" id="46_o68uq"]
[ext_resource type="Texture2D" uid="uid://7ofalqwpydb6" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_5.png" id="47_5npay"]
[ext_resource type="Texture2D" uid="uid://cb1nr5jhnq7ku" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_6.png" id="48_vtdh5"]
[ext_resource type="Texture2D" uid="uid://bi10tvlb0472g" path="res://sprites/player/player_walk_se/fighter_default_walk_SE_315.0_7.png" id="49_7ookd"]
[ext_resource type="Texture2D" uid="uid://c10ackx87cw10" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_0.png" id="50_ut8x5"]
[ext_resource type="Texture2D" uid="uid://4d2yaltowvj1" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_1.png" id="51_620or"]
[ext_resource type="Texture2D" uid="uid://b50exaamsrtu" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_2.png" id="52_a4de6"]
[ext_resource type="Texture2D" uid="uid://bdxvhp7hhqkyl" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_3.png" id="53_v4ble"]
[ext_resource type="Texture2D" uid="uid://ccjbsrk6fhe66" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_4.png" id="54_qi87x"]
[ext_resource type="Texture2D" uid="uid://cxftm7udg0rqw" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_5.png" id="55_g0acy"]
[ext_resource type="Texture2D" uid="uid://14h21wvwlgcx" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_6.png" id="56_6jvkc"]
[ext_resource type="Texture2D" uid="uid://bena3ih6iy4hm" path="res://sprites/player/player_walk_sw/fighter_default_walk_SW_225.0_7.png" id="57_5ny33"]
[ext_resource type="Texture2D" uid="uid://clok36xycfvu7" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_0.png" id="58_4ara4"]
[ext_resource type="Texture2D" uid="uid://cl7glxd5qpi2s" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_1.png" id="59_loaoy"]
[ext_resource type="Texture2D" uid="uid://cto8i57832o7l" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_2.png" id="60_ffh48"]
[ext_resource type="Texture2D" uid="uid://dex701uhsb06v" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_3.png" id="61_8o2pd"]
[ext_resource type="Texture2D" uid="uid://rvja4yyk52dy" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_4.png" id="62_6aru1"]
[ext_resource type="Texture2D" uid="uid://dxtrdekw1iq1h" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_5.png" id="63_yvmrc"]
[ext_resource type="Texture2D" uid="uid://sqpbysaleoop" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_6.png" id="64_u4x8q"]
[ext_resource type="Texture2D" uid="uid://uugi5bfhkt5f" path="res://sprites/player/player_walk_w/fighter_default_walk_W_180.0_7.png" id="65_6mu4s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gaudu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5tdxe")
}, {
"duration": 1.0,
"texture": ExtResource("3_2xwcn")
}, {
"duration": 1.0,
"texture": ExtResource("4_60wir")
}, {
"duration": 1.0,
"texture": ExtResource("5_6x3bc")
}, {
"duration": 1.0,
"texture": ExtResource("6_hme2u")
}, {
"duration": 1.0,
"texture": ExtResource("7_ox1wy")
}, {
"duration": 1.0,
"texture": ExtResource("8_3lmby")
}, {
"duration": 1.0,
"texture": ExtResource("9_qvp1q")
}],
"loop": true,
"name": &"walk_e",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_rmyex")
}, {
"duration": 1.0,
"texture": ExtResource("11_t0tli")
}, {
"duration": 1.0,
"texture": ExtResource("12_l7d5v")
}, {
"duration": 1.0,
"texture": ExtResource("13_t7wq5")
}, {
"duration": 1.0,
"texture": ExtResource("14_168m1")
}, {
"duration": 1.0,
"texture": ExtResource("15_165oi")
}, {
"duration": 1.0,
"texture": ExtResource("16_rcx72")
}, {
"duration": 1.0,
"texture": ExtResource("17_6xc2r")
}],
"loop": true,
"name": &"walk_n",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_uvfk5")
}, {
"duration": 1.0,
"texture": ExtResource("19_o0as3")
}, {
"duration": 1.0,
"texture": ExtResource("20_j882k")
}, {
"duration": 1.0,
"texture": ExtResource("21_x8hwl")
}, {
"duration": 1.0,
"texture": ExtResource("22_nrb8y")
}, {
"duration": 1.0,
"texture": ExtResource("23_5am52")
}, {
"duration": 1.0,
"texture": ExtResource("24_f78sx")
}, {
"duration": 1.0,
"texture": ExtResource("25_i3y76")
}],
"loop": true,
"name": &"walk_ne",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_aort6")
}, {
"duration": 1.0,
"texture": ExtResource("27_jfymv")
}, {
"duration": 1.0,
"texture": ExtResource("28_jpj7p")
}, {
"duration": 1.0,
"texture": ExtResource("29_q6awm")
}, {
"duration": 1.0,
"texture": ExtResource("30_6uojm")
}, {
"duration": 1.0,
"texture": ExtResource("31_s4xp6")
}, {
"duration": 1.0,
"texture": ExtResource("32_imorc")
}, {
"duration": 1.0,
"texture": ExtResource("33_yidkt")
}],
"loop": true,
"name": &"walk_nw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_ko6qb")
}, {
"duration": 1.0,
"texture": ExtResource("35_osku0")
}, {
"duration": 1.0,
"texture": ExtResource("36_d6vs6")
}, {
"duration": 1.0,
"texture": ExtResource("37_o7we4")
}, {
"duration": 1.0,
"texture": ExtResource("38_mu5vf")
}, {
"duration": 1.0,
"texture": ExtResource("39_iruqu")
}, {
"duration": 1.0,
"texture": ExtResource("40_xig82")
}, {
"duration": 1.0,
"texture": ExtResource("41_84uk1")
}],
"loop": true,
"name": &"walk_s",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_b6pud")
}, {
"duration": 1.0,
"texture": ExtResource("43_qnjvb")
}, {
"duration": 1.0,
"texture": ExtResource("44_v47m2")
}, {
"duration": 1.0,
"texture": ExtResource("45_i6vqb")
}, {
"duration": 1.0,
"texture": ExtResource("46_o68uq")
}, {
"duration": 1.0,
"texture": ExtResource("47_5npay")
}, {
"duration": 1.0,
"texture": ExtResource("48_vtdh5")
}, {
"duration": 1.0,
"texture": ExtResource("49_7ookd")
}],
"loop": true,
"name": &"walk_se",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_ut8x5")
}, {
"duration": 1.0,
"texture": ExtResource("51_620or")
}, {
"duration": 1.0,
"texture": ExtResource("52_a4de6")
}, {
"duration": 1.0,
"texture": ExtResource("53_v4ble")
}, {
"duration": 1.0,
"texture": ExtResource("54_qi87x")
}, {
"duration": 1.0,
"texture": ExtResource("55_g0acy")
}, {
"duration": 1.0,
"texture": ExtResource("56_6jvkc")
}, {
"duration": 1.0,
"texture": ExtResource("57_5ny33")
}],
"loop": true,
"name": &"walk_sw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("58_4ara4")
}, {
"duration": 1.0,
"texture": ExtResource("59_loaoy")
}, {
"duration": 1.0,
"texture": ExtResource("60_ffh48")
}, {
"duration": 1.0,
"texture": ExtResource("61_8o2pd")
}, {
"duration": 1.0,
"texture": ExtResource("62_6aru1")
}, {
"duration": 1.0,
"texture": ExtResource("63_yvmrc")
}, {
"duration": 1.0,
"texture": ExtResource("64_u4x8q")
}, {
"duration": 1.0,
"texture": ExtResource("65_6mu4s")
}],
"loop": true,
"name": &"walk_w",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rmplp"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mdwbr"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3l3tw"]
radius = 540.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ru1dr"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1gat3"]
radius = 15.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
top_level = true
z_as_relative = false
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_ucc62")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(2, 2)

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-5.96046e-07, 1.19209e-06)
scale = Vector2(1.05, 1.05)
sprite_frames = SubResource("SpriteFrames_gaudu")
animation = &"walk_sw"
frame_progress = 0.901797

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_rmplp")

[node name="Hurtbox" parent="." instance=ExtResource("4_siioc")]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_mdwbr")

[node name="DisableTimer" parent="Hurtbox" index="1"]
wait_time = 0.25

[node name="PlayerHurtSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vfjov")
volume_db = -24.002
pitch_scale = 1.62

[node name="PlayerDeathSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_54wa6")
volume_db = -22.795

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2(-574, -323)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea" groups=["enemy"]]
position = Vector2(574, 323)
shape = SubResource("CircleShape2D_3l3tw")

[node name="GrabArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_ru1dr")

[node name="CollectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_1gat3")

[node name="Flame" type="Node2D" parent="."]

[node name="FlameAttackTimer" type="Timer" parent="Flame" groups=["gun_attack_timer"]]
wait_time = 0.2
autostart = true

[node name="FlameFireSnd" type="AudioStreamPlayer" parent="Flame"]
stream = ExtResource("7_gv5am")
volume_db = -31.701
pitch_scale = 1.55

[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="timeout" from="Flame/FlameAttackTimer" to="." method="_on_gun_attack_timer_timeout"]

[editable path="Hurtbox"]
